--- a/Assignment1/Pages/ModifyMember.razor
+++ b/Assignment1/Pages/ModifyMember.razor
@@ -18,7 +18,7 @@
 
 @if (ActionType.Equals("Add"))
 {
-    <AddNewAdultBox Family="selectedFamily" MemberType="@MemberType"></AddNewAdultBox>
+    <AddNewThingBox Family="selectedFamily" MemberType="@MemberType"/>
 }
 
 
