--- a/Assignment1/Components/AddNewThingBox.razor
+++ b/Assignment1/Components/AddNewThingBox.razor
@@ -211,7 +211,7 @@
         
         if (MemberType.Equals("Adult"))
         {
-            List<Family> families = FamilyService.GetAllFamilies();
+            List<Family> families = await FamilyService.GetAllFamiliesAsync();
             foreach (var family in families)
             {
                 foreach (var adult in family.Adults)
@@ -234,14 +234,14 @@
             };
             if (AdultToBeAdded == null)
                 Console.WriteLine("/t/t/t Adult to be added is null");
-            FamilyService.AddPerson(Family, AdultToBeAdded, MemberType);
+            await FamilyService.AddPersonAsync(Family, AdultToBeAdded, MemberType);
             await AdultToBeAddedChanged.InvokeAsync(AdultToBeAdded);
         }
 
 
         if (MemberType.Equals("Pet"))
         {
-            List<Family> families = FamilyService.GetAllFamilies();
+            List<Family> families = await FamilyService.GetAllFamiliesAsync();
             foreach (var family in families)
             {
                 foreach (var pet in family.Pets)
@@ -257,13 +257,13 @@
                 Id = id,
                 Species = newPetModel.Species
             };
-            FamilyService.AddPet(Family, PetToBeAdded);
+            await FamilyService.AddPetAsync(Family, PetToBeAdded);
             await PetToBeAddedChanged.InvokeAsync(PetToBeAdded);
         }
 
         if (MemberType.Equals("Child"))
         {
-            List<Family> families = FamilyService.GetAllFamilies();
+            List<Family> families = await FamilyService.GetAllFamiliesAsync();
             foreach (var family in families)
             {
                 foreach (var child in family.Children)
@@ -298,7 +298,7 @@
                 HairColor = newPersonModel.HairColor,
                 ChildInterests = interests
             };
-            FamilyService.AddPerson(Family, ChildToBeAdded, MemberType);
+            await FamilyService.AddPersonAsync(Family, ChildToBeAdded, MemberType);
             Console.WriteLine("Firing event for " + ChildToBeAdded.FirstName);
             await ChildToBeAddedChanged.InvokeAsync(ChildToBeAdded);
         }
